--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="ishubtn">
           <button class="ishubutton"type="button">Calculate</button>
         </div>
-       <div class="result">
+       <div id="ele" class="result">
           <h3 class="lowerh1">❤️Hope For Best❤️</h1>
        </div>
        <h4 class="intro">😘 Shrayash Shukla The Great 😘</h4>
